# demo-microservices

./: .gitignore  README.md  TODO.md  bootstrap.sh  bootstrap.yaml  cloud-formation.yaml  cloudfront.yaml  cluster.yaml  container.yaml  deploy.sh  ec2-instance.yaml  launch-cluster.sh  launch-ec2.sh  launch-server.sh  launch-task.sh  launch.sh  network.yaml  pyproject.toml  root.yaml  server.yaml  task.yaml
forest-app/: Dockerfile  forest.config.yaml
rust-app/: Cargo.toml  Dockerfile
rust-app/src/: main.rs
services/: api.yaml  forest.yaml  frontend.yaml  template.yaml  traefik.yaml
traefik-app/: Dockerfile  docker-entrypoint.sh  traefik_ecs.toml
